--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,7 @@ body {
   font-family: "Mohave", sans-serif;
   scroll-padding-top: 53px;
   overflow-x: hidden;
+  transition: all 0.3s linear;
 }
 
 ul {
@@ -194,10 +195,10 @@ header nav ul li a::before {
   transition: all 0.3s linear;
   transform: scale(0);
 }
-header nav ul li a:hover {
+header nav ul li a:hover, header nav ul li a.active {
   color: #ff3946;
 }
-header nav ul li a:hover::before {
+header nav ul li a:hover::before, header nav ul li a.active::before {
   transform: scale(100%);
 }
 
@@ -319,35 +320,6 @@ form .form-row .input-data {
   height: 1px;
   width: 100%;
   background-color: rgba(153, 153, 153, 0.5);
-}
-
-.submit-btn .input-data {
-  overflow: hidden;
-  height: 45px !important;
-  width: 25% !important;
-}
-.submit-btn .input-data .inner {
-  height: 100%;
-  width: 300%;
-  position: absolute;
-  left: -100%;
-  background: -webkit-linear-gradient(right, #56d8e4, #9f01ea, #56d8e4, #9f01ea);
-  transition: all 0.4s;
-}
-.submit-btn .input-data:hover .inner {
-  left: 0;
-}
-.submit-btn .input-data input {
-  background: none;
-  border: none;
-  color: #fff;
-  font-size: 17px;
-  font-weight: 500;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  cursor: pointer;
-  position: relative;
-  z-index: 2;
 }
 
 @media (max-width: 700px) {
@@ -483,6 +455,38 @@ form .form-row .input-data {
     max-width: 75%;
   }
 }
+.theme {
+  background-color: #777;
+  width: 55px;
+  height: 30px;
+  border-radius: 2rem;
+  position: fixed;
+  top: 30%;
+  left: 4px;
+  z-index: 1000;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s linear;
+}
+.theme::before {
+  content: "";
+  position: absolute;
+  background-color: #314584;
+  width: 25px;
+  height: 25px;
+  left: 1px;
+  top: 50%;
+  transform: translateY(-50%);
+  border-radius: 2rem;
+  transition: all 0.3s linear;
+}
+.theme.active::before {
+  left: 25px;
+}
+.theme.active {
+  background-color: #ff3946;
+}
+
 .services {
   padding: 10rem 0;
   position: relative;
@@ -627,7 +631,7 @@ form .form-row .input-data {
 .contact form input,
 .contact form textarea {
   width: 100%;
-  background-color: #F4FAFE;
+  background-color: #f4fafe;
   padding: 2rem;
   border: none;
   outline: none;
